--- a/src/Components/TextMain/style.scss
+++ b/src/Components/TextMain/style.scss
@@ -10,29 +10,29 @@
 
     &__par {
         color: $red;
-        font-family: "Roboto", sans-serif;
+        font-family: "Gotham Pro", sans-serif;
         font-weight: 400;
         font-size: $font17mob;
     }
 
     &__nav {
-        font-family: "Roboto", sans-serif;
+        font-family: "Gotham Pro", sans-serif;
         font-size: clamp(16px, 7.47648vw, 64px);
         color: $dark;
         font-weight: 700;
         text-align: center;
-        width: 70%;
+        width: 80%;
         line-height: clamp(22.75px, 10.630619999999999vw, 91px);
         margin-top: $m16mob;
     }
 
     &__second {
         color: $dark;
-        font-family: "Roboto", sans-serif;
+        font-family: "Gotham Pro", sans-serif;
         font-weight: 300;
         font-size: $font16mob;
         text-align: center;
-        width: 50%;
+        width: 65%;
         line-height: clamp(12.5px, 5.840999999999999vw, 50px);
         margin-top: $m16mob;
     }
@@ -59,7 +59,7 @@
         padding-top: $m64mob;
 
         &__nav {
-            font-family: "Roboto", sans-serif;
+            font-family: "Gotham Pro", sans-serif;
             font-size: clamp(16px, 7.47648vw, 64px);
             color: #ffffff;
             font-weight: 500;
@@ -71,8 +71,8 @@
 
         &__second {
             color: #ffffff;
-            font-family: "Roboto", sans-serif;
-            width: 75%;
+            font-family: "Gotham Pro", sans-serif;
+            width: 70%;
             text-align: center;
             line-height: clamp(12.5px, 5.840999999999999vw, 50px);
             font-size: $font16mob;
